Bug 792966: Don't try to gralloc small buffers. r=kanru